plugins {
	id 'java'
	id 'jacoco'
	id 'com.github.kt3k.coveralls' version '2.12.2'
}

group = 'com.yupzip'
version = '3.0.0'

compileJava {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20'
	implementation 'tools.jackson.core:jackson-core:3.0.3'
	implementation 'tools.jackson.core:jackson-databind:3.0.3'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:6.0.2'
	testImplementation 'org.junit.platform:junit-platform-launcher:6.0.2'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:6.0.2'
	testImplementation 'org.mockito:mockito-core:5.21.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
}

test {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.required = true
		html.required = true
	}
}
